--- a/Index/index.html
+++ b/Index/index.html
@@ -48,7 +48,7 @@ my_image.src = "Me.png";
 <center>
 <nav id="mobile_menu" class="cl-effect-16">
 <nav id="nav_menu" class="cl-effect-16">
-			<a href="http://techteach.us/WCP2016/ZDorant/PROJECTS/PROJECT5/index2.html" data-hover="Homepage">Homepage</a>
+			<a href="http://techteach.us/WCP2016/ZDorant/" data-hover="Homepage">Homepage</a>
 			<a href="http://techteach.us/WCP2016/ZDorant/labindex/labs.html" data-hover="Labs">Labs</a>
 			<a href="http://techteach.us/WCP2016/ZDorant/projectindex/projects.html" data-hover="Projects">Projects</a>
 			<a href="https://plus.google.com/u/0/116215094398076918896" data-hover="Blog">Blog</a>
